<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cold Refrigeration User</string>
    <string name="app">Cold Refrigeration</string>

    <string name="sign_in">SIGN IN</string>

    <string name="type_email">Email address</string>
    <string name="type_password">Password</string>
    <string name="type_name">Name</string>
    <string name="type_phone">Phone number</string>
    <string name="show_pass">Show password</string>
    <string name="no_acc">Do not have an account ?</string>
    <string name="already_acc">Already have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="cre" tools:ignore="TypographyEllipsis">Creating account...</string>
    <string name="cre_account">Create new account</string>

    <string name="api_key">Hbw0MmUmaQM-5zxhzlaKDvIkbsqSJddq2YfrQEbHTX</string>

    // User home page

    <string name="sign_out">Sign out</string>
    <string name="welcome_to">Welcome to</string>
    <string name="your_det">Your details</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>

    <string name="pending">Pending work</string>
    <string name="need_service">Need service</string>
    <string name="previous">Previous orders</string>
    <string name="done_works">Done works</string>
    <string name="contact">Contact us</string>


    // Need service

    <string name="book">Book a service</string>
    <string name="select_service">Select service</string>
    <string name="advance_amount">Advance amount</string>

    <string name="service_cost">Service cost</string>

    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="advance">You have to pay 10% of the service cost as advance amount to confirm your booking.</string>

    <string name="confirm_booking">Confirm booking</string>
    <string name="pending_bookings">Pending bookings</string>

    // Pending booking

    <string name="price">Booking price</string>
    <string name="booking_date">Booking date</string>
    <string name="no_data_found">No data found</string>
    <string-array name="loading">
        <item tools:ignore="TypographyEllipsis">Loading...</item>
    </string-array>

    <string name="message">Thank you for choosing our service.
        Our worker will reach you soon to complete the job. Hope you will like our service. - Team COLD REFRIGERATION</string>
    <string name="API_KEY">20otlE1ceI8DYKWzmuMvxPwkUSfOs6RB7T9FpLdJCqnhQH4A5gpAu1SvIabJ3C6QDB9j5U8grwLkKnli</string>

    <string name="admin_msg">A new booking has been created. Please assign a worker to it.</string>

    // Previous

    <string name="worker_name">Worker name</string>
    <string name="worker_contact">Worker contact</string>

</resources>