<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_2"
        android:text="@string/cre_account"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_medium"
        android:gravity="center"
        android:textSize="20sp">

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/email_et"
        android:textCursorDrawable="@drawable/cursor_et"
        android:inputType="textEmailAddress"
        android:background="@color/white"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/gray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/type_email"
        android:textSize="17sp"
        android:fontFamily="@font/lato_regular"
        android:drawableStart="@drawable/ic_email"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/silver"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">

    </View>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/password_et"
        android:inputType="textPassword"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:textCursorDrawable="@drawable/cursor_et"
        android:textColorHint="@color/gray"
        android:textColor="@color/dark_grey"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:drawablePadding="10dp"
        android:hint="@string/type_password"
        android:textSize="17sp"
        android:fontFamily="@font/lato_regular"
        android:drawableStart="@drawable/ic_password"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

    </EditText>

    <CheckBox
        android:id="@+id/show_pass_check"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/blue_2"
        android:text="@string/show_pass"
        android:textColor="@color/blue_2">

    </CheckBox>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@drawable/btn_bg"
        android:text="@string/sign_up"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:id="@+id/sign_up_btn"
        android:layout_marginBottom="50dp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_regular"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

    </TextView>



</LinearLayout>