<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_work"
                android:id="@+id/work_icon"
                android:layout_centerVertical="true"
                android:layout_margin="10dp">

            </ImageView>

            <View
                android:layout_width="0.7dp"
                android:layout_height="34dp"
                android:background="@color/gray"
                android:id="@+id/one"
                android:layout_toEndOf="@id/work_icon"
                android:layout_centerVertical="true">

            </View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/one"
                android:text="@string/app"
                android:textSize="17sp"
                android:id="@+id/service_name_text"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/dark_grey">

            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/price_text"
                android:textSize="17sp"
                android:text="@string/service_cost"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/gray">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/price_text"
                android:text="@string/price"
                android:id="@+id/service_price_text"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:fontFamily="@font/lato_medium"
                android:textColor="@color/dark_grey"
                android:paddingEnd="0dp">

            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/booking_date_head"
                android:textSize="17sp"
                android:text="@string/booking_date"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/gray">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/booking_date_head"
                android:text="@string/booking_date"
                android:id="@+id/service_booking_date_text"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:fontFamily="@font/lato_medium"
                android:textColor="@color/dark_grey"
                android:paddingEnd="0dp">

            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/worker_name_head"
                android:textSize="17sp"
                android:text="@string/worker_name"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/gray">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/worker_name_head"
                android:text="@string/worker_name"
                android:id="@+id/worker_name_text"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:fontFamily="@font/lato_medium"
                android:textColor="@color/dark_grey"
                android:paddingEnd="0dp">

            </TextView>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/worker_phone_head"
                android:textSize="17sp"
                android:text="@string/worker_contact"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/gray">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/worker_phone_head"
                android:text="@string/worker_contact"
                android:id="@+id/worker_contact_text"
                android:textIsSelectable="true"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:fontFamily="@font/lato_medium"
                android:textColor="@color/dark_grey"
                android:paddingEnd="0dp">

            </TextView>

        </RelativeLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>